Wed Aug 30 23:20:42 CEST 2006 (tk)
----------------------------------
  * configure: check for socklen_t and define it if needed

Sun Aug 27 19:48:17 CEST 2006 (tk)
----------------------------------
  * freshclam: apply timeout patch from Everton da Silva Marques
	       <everton*lab.ipaccess.diveo.net.br>

Sun Aug 27 10:52:55 BST 2006 (njh)
----------------------------------
  * libclamav/blob.c:	Don't use % in filenames on Windows, since cmd.exe
				uses that to start environment variables
			Reported by Nico <tbb*hideout.ath.cx>

Sat Aug 26 23:41:08 CEST 2006 (tk)
----------------------------------
  * libclamav/mspack: fix double close of file descriptor, patch from NJH

Fri Aug 25 21:23:59 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: "Cache-Control: no-cache" is now disabled by default.
			 If you're behind a broken proxy you can recompile
			 freshclam with --enable-no-cache.

Fri Aug 25 15:39:17 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Tidy. Today's work seems to have removed the memory
				leak in the blacklist code.

Fri Aug 25 14:11:05 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Fix a problem with multiple messages on the same
				connexion introduced earlier today

Fri Aug 25 11:22:24 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Start a separate thread for each load balancing server
				that is being queried
			When not in internal mode, don't send headers to clamd
				that it will discard (cf usefulHeaders() in
				libclamav/mbox.c)

Wed Aug 23 07:54:15 BST 2006 (njh)
----------------------------------
  * clamav-milter:	--report-phish didn't work with --quarantine-dir

Sun Aug 20 20:43:44 BST 2006 (njh)
----------------------------------
  * libclamav/untar.c:	Ensure a file is open before closing on error return

Sat Aug 19 22:37:28 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Use HAVE_CTIME_R_2 for older daily.cvd files -