@@ -40,19 +40,20 @@
 #include <syslog.h>
 #endif
 
-#include "options.h"
-#include "manager.h"
-#include "defaults.h"
-#include "freshclam.h"
-#include "output.h"
 #include "target.h"
-#include "misc.h"
+#include "clamav.h"
+
+#include "shared/options.h"
+#include "shared/output.h"
+#include "shared/misc.h"
+
 #include "execute.h"
+#include "manager.h"
 
 static short terminate = 0;
 extern int active_children;
 
-short foreground = 1;
+static short foreground = 1;
 
 static void daemon_sighandler(int sig) {
 
@@ -79,10 +80,11 @@ static void daemon_sighandler(int sig) {
     return;
 }
 
-
-static void writepid(char *pidfile) {
+static void writepid(char *pidfile)
+{
 	FILE *fd;
 	int old_umask;
+
     old_umask = umask(0006);
     if((fd = fopen(pidfile, "w")) == NULL) {
 	logg("!Can't save PID to file %s: %s\n", pidfile, strerror(errno));
@@ -93,14 +95,89 @@ static void writepid(char *pidfile) {
     umask(old_umask);
 }
 
+void help(void)
+{
+    mprintf_stdout = 1;
+
+    mprintf("\n");
+    mprintf("                   Clam AntiVirus: freshclam  "VERSION"\n");
+    mprintf("    (C) 2002 - 2005 ClamAV Team - http://www.clamav.net/team.html\n\n");
+
+    mprintf("    --help               -h              show help\n");
+    mprintf("    --version            -V              print version number and exit\n");
+    mprintf("    --verbose            -v              be verbose\n");
+    mprintf("    --debug                              enable debug messages\n");
+    mprintf("    --quiet                              only output error messages\n");
+    mprintf("    --stdout                             write to stdout instead of stderr\n");
+    mprintf("\n");
+    mprintf("    --config-file=FILE                   read configuration from FILE.\n");
+    mprintf("    --log=FILE           -l FILE         log into FILE\n");
+    mprintf("    --daemon             -d              run in daemon mode\n");
+    mprintf("    --pid=FILE           -p FILE         save daemon's pid in FILE\n");
+    mprintf("    --user=USER          -u USER         run as USER\n");
+    mprintf("    --no-dns                             force old non-DNS verification method\n");
+    mprintf("    --checks=#n          -c #n           number of checks per day, 1 <= n <= 50\n");
+    mprintf("    --datadir=DIRECTORY                  download new databases into DIRECTORY\n");
+#ifdef BUILD_CLAMD
+    mprintf("    --daemon-notify[=/path/clamd.conf]   send RELOAD command to clamd\n");
+#endif
+    mprintf("    --local-address=IP   -a IP           bind to IP for HTTP downloads\n");
+    mprintf("    --on-update-execute=COMMAND          execute COMMAND after successful update\n");
+    mprintf("    --on-error-execute=COMMAND           execute COMMAND if errors occured\n");
+    mprintf("    --on-outdated-execute=COMMAND        execute COMMAND when software is outdated\n");
+
+    mprintf("\n");
+}
+
+int download(const struct cfgstruct *copt, const struct optstruct *opt)
+{
+	int ret = 0, try = 0, maxattempts = 0;
+	struct cfgstruct *cpt;
+
+
+    maxattempts = cfgopt(copt, "MaxAttempts")->numarg;
+    logg("*Max retries == %d\n", maxattempts);
+
+    if(!(cpt = cfgopt(copt, "DatabaseMirror"))->enabled) {
+	logg("^You must specify at least one database mirror.\n");
+	return 56;
+    } else {
+
+	while(cpt) {
+	    ret = downloadmanager(copt, opt, cpt->strarg);
+	    alarm(0);
+
+	    if(ret == 52 || ret == 54 || ret == 58 || ret == 59) {
+		if(try < maxattempts - 1) {
+		    logg("Trying again in 5 secs...\n");
+		    try++;
+		    sleep(5);
+		    continue;
+		} else {
+		    logg("Giving up on %s...\n", cpt->strarg);
+		    cpt = (struct cfgstruct *) cpt->nextarg;
+		    if(!cpt) {
+			logg("^Update failed. Your network may be down or none of the mirrors listed in freshclam.conf is working.\n");
+		    }
+		    try = 0;
+		}
+
+	    } else {
+		return ret;
+	    }
+	}
+    }
+
+    return ret;
+}
+
 int main(int argc, char **argv)
 {
 	int ret = 52;
 	char *newdir, *cfgfile;
 	char *pidfile = NULL;
 	struct cfgstruct *copt, *cpt;
-	struct sigaction sigact;
-	struct sigaction oldact;
+	struct sigaction sigact, oldact;
 #if !defined(C_CYGWIN)  && !defined(C_OS2)
 	char *unpuser;
 	struct passwd *user;
@@ -142,8 +219,15 @@ int main(int argc, char **argv)
     }
 
     if(opt_check(opt, "help")) {
-	opt_free(opt);
     	help();
+	opt_free(opt);
+	return 0;
+    }
+
+    if(opt_check(opt, "version")) {
+	print_version();
+	opt_free(opt);
+	return 0;
     }
 
     /* parse the config file */
@@ -181,44 +265,46 @@ int main(int argc, char **argv)
 
 #if !defined(C_CYGWIN)  && !defined(C_OS2)
     /* freshclam shouldn't work with root privileges */
-    if(opt_check(opt, "user")) {
+    if(opt_check(opt, "user"))
 	unpuser = opt_arg(opt, "user");
-    } else if((cpt = cfgopt(copt, "DatabaseOwner"))->enabled) {
-	unpuser = cpt->strarg;
-    } else {
-	unpuser = UNPUSER;
-    }
+    else
+	unpuser = cfgopt(copt, "DatabaseOwner")->strarg;
 
     if(!geteuid()) {
 	if((user = getpwnam(unpuser)) == NULL) {
 	    logg("^Can't get information about user %s.\n", unpuser);
-	    exit(60); /* this is critical problem, so we just exit here */
+	    opt_free(opt);
+	    return 60;
 	}
 
 	if(cfgopt(copt, "AllowSupplementaryGroups")->enabled) {
 #ifdef HAVE_INITGROUPS
 	    if(initgroups(unpuser, user->pw_gid)) {
 		logg("^initgroups() failed.\n");
-		exit(61);
+		opt_free(opt);
+		return 61;
 	    }
 #endif
 	} else {
 #ifdef HAVE_SETGROUPS
 	    if(setgroups(1, &user->pw_gid)) {
 		logg("^setgroups() failed.\n");
-		exit(61);
+		opt_free(opt);
+		return 61;
 	    }
 #endif
 	}
 
 	if(setgid(user->pw_gid)) {
 	    logg("^setgid(%d) failed.\n", (int) user->pw_gid);
-	    exit(61);
+	    opt_free(opt);
+	    return 61;
 	}
 
 	if(setuid(user->pw_uid)) {
 	    logg("^setuid(%d) failed.\n", (int) user->pw_uid);
-	    exit(61);
+	    opt_free(opt);
+	    return 61;
 	}
     }
 #endif
@@ -237,11 +323,6 @@ int main(int argc, char **argv)
     if(opt_check(opt, "stdout"))
 	mprintf_stdout = 1;
 
-    if(opt_check(opt, "version")) {
-	print_version();
-	exit(0);
-    }
-
     /* initialize logger */
 
     if(cfgopt(copt, "LogVerbose")->enabled)
@@ -251,13 +332,15 @@ int main(int argc, char **argv)
 	logg_file = opt_arg(opt, "log");
 	if(logg("#--------------------------------------\n")) {
 	    mprintf("!Problem with internal logger (--log=%s).\n", logg_file);
-	    exit(62);
+	    opt_free(opt);
+	    return 62;
 	}
     } else if((cpt = cfgopt(copt, "UpdateLogFile"))->enabled) {
 	logg_file = cpt->strarg; 
 	if(logg("#--------------------------------------\n")) {
 	    mprintf("!Problem with internal logger (UpdateLogFile = %s).\n", logg_file);
-	    exit(62);
+	    opt_free(opt);
+	    return 62;
 	}
     } else
 	logg_file = NULL;
@@ -269,7 +352,8 @@ int main(int argc, char **argv)
 	if((cpt = cfgopt(copt, "LogFacility"))->enabled) {
 	    if((fac = logg_facility(cpt->strarg)) == -1) {
 		mprintf("!LogFacility: %s: No such facility.\n", cpt->strarg);
-		exit(62);
+		opt_free(opt);
+		return 62;
 	    }
 	}
 
@@ -286,10 +370,10 @@ int main(int argc, char **argv)
 
     if(chdir(newdir)) {
 	logg("Can't change dir to %s\n", newdir);
-	exit(50);
+	opt_free(opt);
+	return 50;
     } else
 	logg("*Current working dir is %s\n", newdir);
-
 
     if(opt_check(opt, "daemon")) {
 	    int bigsleep, checks;
@@ -305,13 +389,15 @@ int main(int argc, char **argv)
 
 	if(checks <= 0) {
 	    logg("^Number of checks must be a positive integer.\n");
-	    exit(41);
+	    opt_free(opt);
+	    return 41;
 	}
 
 	if(!cfgopt(copt, "DNSDatabaseInfo")->enabled || opt_check(opt, "no-dns")) {
 	    if(checks > 50) {
 		logg("^Number of checks must be between 1 and 50.\n");
-		exit(41);
+		opt_free(opt);
+		return 41;
 	    }
 	}
 
@@ -320,6 +406,7 @@ int main(int argc, char **argv)
 	if(!cfgopt(copt, "Foreground")->enabled) {
             foreground = 0;
 	    daemonize();
+	    mprintf_disabled = 1;
         }
 
 	if(opt_check(opt, "pid")) {
@@ -396,97 +483,4 @@ int main(int argc, char **argv)
 
     opt_free(opt);
     return(ret);
-}
-
-int download(const struct cfgstruct *copt, const struct optstruct *opt)
-{
-	int ret = 0, try = 0, maxattempts = 0;
-	struct cfgstruct *cpt;
-
-
-    maxattempts = cfgopt(copt, "MaxAttempts")->numarg;
-    logg("*Max retries == %d\n", maxattempts);
-
-    if(!(cpt = cfgopt(copt, "DatabaseMirror"))->enabled) {
-	logg("^You must specify at least one database mirror.\n");
-	return 56;
-    } else {
-
-	while(cpt) {
-	    ret = downloadmanager(copt, opt, cpt->strarg);
-	    alarm(0);
-
-	    if(ret == 52 || ret == 54 || ret == 58 || ret == 59) {
-		if(try < maxattempts - 1) {
-		    logg("Trying again in 5 secs...\n");
-		    try++;
-		    sleep(5);
-		    continue;
-		} else {
-		    logg("Giving up on %s...\n", cpt->strarg);
-		    cpt = (struct cfgstruct *) cpt->nextarg;
-		    if(!cpt) {
-			logg("^Update failed. Your network may be down or none of the mirrors listed in freshclam.conf is working.\n");
-		    }
-		    try = 0;
-		}
-
-	    } else {
-		return ret;
-	    }
-	}
-    }
-
-    return ret;
-}
-
-void daemonize(void)
-{
-	int i;
-
-    for(i = 0; i < 3; i++)
-	close(i);
-
-    umask(0);
-
-    if(fork())
-	exit(0);
-
-    setsid();
-    mprintf_disabled = 1;
-}
-
-void help(void)
-{
-    mprintf_stdout = 1;
-
-    mprintf("\n");
-    mprintf("                   Clam AntiVirus: freshclam  "VERSION"\n");
-    mprintf("    (C) 2002 - 2005 ClamAV Team - http://www.clamav.net/team.html\n\n");
-
-    mprintf("    --help               -h              show help\n");
-    mprintf("    --version            -V              print version number and exit\n");
-    mprintf("    --verbose            -v              be verbose\n");
-    mprintf("    --debug                              enable debug messages\n");
-    mprintf("    --quiet                              only output error messages\n");
-    mprintf("    --stdout                             write to stdout instead of stderr\n");
-    mprintf("\n");
-    mprintf("    --config-file=FILE                   read configuration from FILE.\n");
-    mprintf("    --log=FILE           -l FILE         log into FILE\n");
-    mprintf("    --daemon             -d              run in daemon mode\n");
-    mprintf("    --pid=FILE           -p FILE         save daemon's pid in FILE\n");
-    mprintf("    --user=USER          -u USER         run as USER\n");
-    mprintf("    --no-dns                             force old non-DNS verification method\n");
-    mprintf("    --checks=#n          -c #n           number of checks per day, 1 <= n <= 50\n");
-    mprintf("    --datadir=DIRECTORY                  download new databases into DIRECTORY\n");
-#ifdef BUILD_CLAMD
-    mprintf("    --daemon-notify[=/path/clamd.conf]   send RELOAD command to clamd\n");
-#endif
-    mprintf("    --local-address=IP   -a IP           bind to IP for HTTP downloads\n");
-    mprintf("    --on-update-execute=COMMAND          execute COMMAND after successful update\n");
-    mprintf("    --on-error-execute=COMMAND           execute COMMAND if errors occured\n");
-    mprintf("    --on-outdated-execute=COMMAND        execute COMMAND when software is outdated\n");
-
-    mprintf("\n");
-    exit(0);
 }
