@@ -29,5 +29,6 @@ int isnumb(const char *str);
 int rmdirs(const char *dirname);
 int dircopy(const char *src, const char *dest);
 int cvd_unpack(const char *cvd, const char *destdir);
+void daemonize(void);
 
 #endif
